# repare

./: .gitignore  README.md  devenv.nix  devenv.yaml  pyproject.toml  repare_env.yaml  requirements.txt
results/causalchamber/: dag_summary.txt  grid_metrics.csv  method_metrics.csv  ut_grid_metrics.csv
results/sachs/: dataset.pkl  results.csv
results/synth/: results_num_intervs_2.csv  results_num_intervs_5.csv  results_num_intervs_8.csv
src/causal_chambers/: __init__.py  ut_igsp.py
src/expt/: README.md
src/expt/results/: causalchamber_dags.txt  causalchamber_summary.csv  er_results_ivn=2.csv  er_results_ivn=5.csv  er_results_ivn=8.csv  scalability.csv  sf_results_ivn=2.csv  sf_results_ivn=5.csv  sf_results_ivn=8.csv
src/expt/results/causalchamber/: dag_summary.txt  grid_metrics.csv  method_metrics.csv  ut_grid_metrics.csv
src/expt/results/causalchamber/grid_runs/alpha=0p0001_beta=0p0001/: metrics.json  model.pkl
src/expt/results/causalchamber/grid_runs/alpha=0p0001_beta=0p001/: metrics.json  model.pkl
src/expt/results/causalchamber/grid_runs/alpha=0p0001_beta=0p01/: metrics.json  model.pkl
src/expt/results/causalchamber/grid_runs/alpha=0p0001_beta=0p1/: metrics.json  model.pkl
src/expt/results/causalchamber/no_edges/: dag_summary.txt  grid_metrics.csv  method_metrics.csv  ut_grid_metrics.csv
src/expt/results/causalchamber_chain/: dag_summary.txt  grid_metrics.csv  method_metrics.csv  ut_grid_metrics.csv
src/expt/results/causalchamber_chain/no_edges/: dag_summary.txt  grid_metrics.csv  method_metrics.csv  ut_grid_metrics.csv
src/expt/results/scalability/summary/: graph=erdos_renyi_edge_prob=0.15_method=RePaRe.csv
src/expt/results/scale_free/: results_num_intervs_2.csv  results_num_intervs_5.csv  results_num_intervs_8.csv
src/expt/workflow/: Snakefile  repare_failure.smk  scalability.smk
src/expt/workflow/config/: plot_existing_repare.yaml  plot_existing_scalability.yaml  scalability.yaml
src/expt/workflow/rules/: causalchamber.smk  repare_failure.smk  sachs.smk  scalability.smk  synth.smk  synth_scale_free.smk  synthsachs.smk
src/expt/workflow/scripts/: aggregate.py  aggregate_scalability.py  aggregate_scale_free.py  causalchamber_aggregate.py  causalchamber_gies.py  causalchamber_gnies.py  causalchamber_prepare.py  causalchamber_repare.py  causalchamber_utigsp.py  collect.py  eval_repare_failure.py  eval_sachs.py  eval_synth.py  eval_synth_scale_free.py  eval_synthsachs.py  evaluate.py  fit.py  fit_causalchamber_grid.py  fit_sachs.py  fit_scalability.py  fit_synth.py  fit_synth_scale_free.py  fit_synthsachs.py  gen_scalability.py  gen_synth.py  gen_synth_scale_free.py  generate.py  make_table.py  plot.py  plot_repare_failure.py  plot_scalability.py  plot_synth.py  plot_synth_scale_free.py  plot_synthsachs.py  prepare_sachs.py  scalability_plot.py  synthesize_ground_truth.py  synthesize_sachs_data.py
src/repare/: cdci.py  repare.py  utils.py
tests/: test_repare.py
(+120 files in other folders)
